# bot-dc

./: .env  .env.example  .env.glitch  .gitignore  .glitch-assets  .replit  ANALISE_DEPLOY_CONFIGURACOES.md  ANALISE_FEATURES_PERFORMANCE.md  ANALISE_SEGURANCA_ERROS_LOGGING.md  CHANGELOG.md  CONFIGURACAO_APIS.md  CORRECAO_PORTA_RENDER.md  CORRECAO_RESET_SERVIDOR.md  DEPLOY_AUTOMATICO.md  DEPLOY_FINAL.md  DEPLOY_FREE_24_7.md  DEPLOY_GUIDE.md  DEPLOY_ZERO_CLICK.md  GRAFICOS.md  INSTALACAO.md  MELHORIAS_PERFORMANCE.md  MINIGAMES.md  MODERACAO.md  NOTIFICACOES.md  OTIMIZACAO_BANCO_DADOS.md  README.md  README_MODERN.md  REFACTOR_ANALYSIS.md  REFATORACAO_MODERNIZACAO_CODIGO.md  RENDER_DEPLOY_GUIA.md  RENDER_DEPLOY_GUIDE.md  RENDER_ENV_VARS.txt  RENDER_ENV_VARS_FINAL.txt  REPLIT_SECRETS.md  TESTE_SISTEMA_ACESSO.md  achievement_system.py  app.py  badge_system.py  bot.py  charts_system.py  (+62 more)
backups/: data_backup_20250822_140555.json  data_backup_20250822_141525.json  data_backup_20250822_143941.json  data_backup_20250822_144113.json  data_backup_20250822_144224.json  data_backup_20250822_144549.json  data_backup_20250822_144559.json
config/: config.json
config/features/: achievements.json  dual_ranking.json  dynamic_channels.json  notifications.json  pubg.json  seasons.json
data/: user_badges.json
database/: supabase_setup.sql
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md
migration_backup/: requirements.txt
migration_backup/data/: minigames.json  notifications.json
src/: __main__.py  bot.py
src/commands/: __init__.py  (+11 more)
templates/: dashboard.html  player_profile.html
(+77 files in other folders)
